fix white color inherited color contrast for the <h3> on homepage

--- a/slice/src/components/sSlider/sSlider.scss
+++ b/slice/src/components/sSlider/sSlider.scss
@@ -25,7 +25,7 @@
     text-align: center;
 
     h2, h3, h4, h5, h6 {
-      color: currentColor;
+      /*color: currentColor;*/
       margin-bottom: 10px;
     }
   }
